# warp

./: .gitignore  Cargo.toml  bar_stacked.py  compilevsml.py  dag.hops  dagsave  experiment.py  glm.dot  glm.hop  hops_-1003334225  hops_1957793473  hops_2002741515  l2svm.dag  msvm.hop  out  overhead.py  plot.py  problem.lp  runtime  showdag.py  strategies.py  svm1.dot  temp  temp.dot  udf.hop
als/: finalals.hop
dots/: bind.dot  dag.dot  extrans  la_parrot  lmul.dot  rabind.dot  ratrans  raunbind.dot  test.dot  trans.dot  transpose.dot
glm/: 2002.dot  6513.dot  8387.dot  hops_-651318885  hops_-838702319  showdag.py
l2svm/: 1.dot  2.dot  3.dot  finalsvm.hop  l2svm1.hop  l2svm2.hop  min1mul.hop  selp.hop  sprop.hop
mlog/: mlog1.hop  mlog2.hop  mlog3.hop  mlog4.hop
msvm/: msvm1.hop  msvm2.hop  msvm3.hop  msvm4.hop
pnmf/: d.dot  finalpnmf.hop
revexp/: experiment.py  overhead.py  strategies.py
src/: extract.rs  hop.rs  lib.rs  main.rs  rules.rs  translate.rs
tests/: dag.hops  tests.rs
