[package]
name = "warp"
version = "0.1.0"
authors = ["remysucre <remy.sucre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { path = "../egg" }
log = "0.4"
indexmap = "1.1"
nanoid = "0.2"

ordered-float = "1"
env_logger = "0.6"
smallvec = "0.6"

pest = "2.0"
pest_derive = "2.0"
# lp-modeler = { path = "../rust-lp-modeler" }
lp-modeler = "0.4"
bimap = "0.4"

[features]
parent-pointers = ["egg/parent-pointers"]
